--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-WEBHOOK_URL=https://discord.com/api/webhooks/1258929110122762281/CkDF75VFJ2mu_2iU0M4bQ9siSm5DyZwKDDjjnhpfLKCc25Qp9V-Y75ZEbH7vkjYeyKIi
+WEBHOOK_URL=https://webhook-test.com/04e6cb65adac3e196b1e6f6411509d75
