--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-compile-sass": "^4.0.0",
+    "node-sass": "npm:sass@^1.77.6"
   }
 }
